--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 :root {
-  --font-family: 'Poppins', sans-serif;
+  --font-family: "Poppins", sans-serif;
+  --font-size: 16px;
+  --primary-color: #4caf50;
 }
 
 body {
